stop mobile call intefrace from overflowing

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -534,6 +534,7 @@ body {
 
     .call-interface {
         max-height: 40vh;
+        overflow-y: scroll;
     }
 }
 
